mcp-attr/tests/compile_fail/complete_not_result.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> tests/compile_fail/complete_not_result.rs:12:44
   |
12 |     async fn test_prompt(&self, #[complete(complete_not_result)] msg: String) -> mcp_attr::Result<String> {
   |                                            ^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `Vec<std::string::String>`
   |
   = help: the trait `Try` is not implemented for `Vec<std::string::String>`
